--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="menu"><a href="index.html"></a><a href="nagykep.html"></a></div>
     <div class="kepek">
-        <img src="kepek/300/_DSC6696_10.jpg" alt="">
-        <img src="kepek/300/_DSC8090_10.jpg" alt="">
-        <img src="kepek/300/_DSC9920_10.jpg" alt="">
-        <img src="kepek/300/_MG_1420_2_10.jpg" alt="">
-        <img src="kepek/300/_MG_2995_10.jpg" alt="">
+        <img src="kepek/300/DSC6696_10.jpg" alt="">
+        <img src="kepek/300/DSC8090_10.jpg" alt="">
+        <img src="kepek/300/DSC9920_10.jpg" alt="">
+        <img src="kepek/300/MG_1420_2_10.jpg" alt="">
+        <img src="kepek/300/MG_2995_10.jpg" alt="">
 
     </div>
 </body>
