--- a/nagykep.html
+++ b/nagykep.html
@@ -14,11 +14,11 @@
 <body>
     <div class="menu"><a href="index.html"></a><a href="nagykep.html"></a></div>
     <div class="kepek">
-        <img src="kepek/_DSC6696.jpg" alt="">
-        <img src="kepek/_DSC8090.jpg" alt="">
-        <img src="kepek/_DSC8235.jpg" alt="">
-        <img src="kepek/_DSC9920.jpg" alt="">
-        <img src="kepek/_MG_1121_1.jpg" alt="">
+        <img src="kepek/300/DSC6696_10.jpg" alt="">
+        <img src="kepek/DSC8090.jpg" alt="">
+        <img src="kepek/DSC8235.jpg" alt="">
+        <img src="kepek/DSC9920.jpg" alt="">
+        <img src="kepek/MG_1121_1.jpg" alt="">
 
     </div>
 </body>
